fixed footer, page finished but not responsive (will modify in the future)

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -191,3 +191,12 @@ header, .section-one {
   background-color: transparent;
   color: #F9FAF8;
 }
+
+footer {
+  text-align: center;
+  padding: 30px 40px;
+}
+
+footer p {
+  color: #F9FAF8;
+}
